added media query for responsive site at home page

--- a/ajanta_ellora/css/ajanta_caves.css
+++ b/ajanta_ellora/css/ajanta_caves.css
@@ -81,3 +81,7 @@ body{
     color: black;
     background-color: white;
 }
+
+
+/* contents  */
+/* ***************************************************************** */
