--- a/pune/css/mountains.css
+++ b/pune/css/mountains.css
@@ -139,6 +139,77 @@ html{
 /* contents  */
 /* ***************************************************************** */
 
+.pane{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+}
+
+.map{
+    width: 95%;
+    height: 500px;
+    background-color: rgb(224, 224, 224);
+}
+
+#img{
+    background-color: black;
+    height: 400px;;
+    width: 95%;
+    margin-right: 10%;
+    margin-left: 10%;
+}
+
+/* reachablity  */
+/* ***************************************************************** */
+.reach{
+    display: flex;
+    flex-direction: column;
+    border-radius: 15px;
+    background-color: rgb(218, 227, 255);
+    margin: 3%;
+    padding: 2%;
+    margin-bottom: 0px;
+}
+
+
+
+/* hotel  */
+/* ***************************************************************** */
+#hotelp{
+    margin-top: 10px;
+    padding-left:3% ;
+    display: flex;
+    flex-direction: column;
+    width: 93%;
+    border-radius: 15px;
+    background-color: rgb(230, 230, 230);
+}
+
+.hotph{
+    margin: auto ;
+
+}
+
+.hotpn{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+}
+
+.hotpn li{
+    list-style: none;
+    /* border: 2px solid black ; */
+    background-color: rgb(194, 194, 194);
+    border-radius: 10px;
+    margin-top: 15px;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
 
 
 
