--- a/pune/css/trek_and_garderns.css
+++ b/pune/css/trek_and_garderns.css
@@ -17,6 +17,41 @@ html{
     scroll-behavior: smooth;
 }
 
+.bmn{
+    margin-bottom: 0px;
+}
+
+.tmn{
+    margin-top: 0px;
+}
+
+.lmn{
+    margin-left: 0px;
+}
+
+.rmn{
+    margin-right: 0px;
+}
+
+.r1{
+    font-size: 1.5rem;
+}
+
+.r2{
+    font-size: 2rem;
+}
+.r24{
+    font-size: 2.4rem;
+}
+
+.r3{
+    font-size: 3rem;
+}
+
+iframe{
+    border-radius: 15px;
+    border: 3px solid black;
+}
 
 /* navigation  */
 /* ***************************************************************** */
