--- a/mumbai/css/caves.css
+++ b/mumbai/css/caves.css
@@ -195,7 +195,10 @@ iframe{
     margin-right: 10%;
     margin-left: 10%;
 }
-
+iframe{
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
 /* reachablity  */
 /* ***************************************************************** */
 .reach{
