--- a/pune/css/trek_and_garderns.css
+++ b/pune/css/trek_and_garderns.css
@@ -171,6 +171,45 @@ iframe{
 
 }
 
+/* other places  */
+/* ******************************************************************* */
+.otherplaces{
+    width: 100%;
+}
+
+.pn{
+    padding:0px;
+}
+
+.otherplaces ul{
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    justify-content: space-evenly;
+}
+
+.other{
+    background-color: rgb(225, 225, 225);
+    border:2px solid white;
+    border-radius: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.other:hover{
+    border: 2px solid black;
+    background-color: rgb(255, 255, 255);
+}
+
+.present{
+    border: 2px solid black;
+    background-color: rgb(255, 255, 255);
+
+}
+
+
 /* contents  */
 /* ***************************************************************** */
 
@@ -204,9 +243,7 @@ iframe{
     background-color: rgb(218, 227, 255);
     margin: 3%;
     padding: 2%;
-    margin-bottom: 0px;
 }
-
 
 
 /* hotel  */
