--- a/css/style.css
+++ b/css/style.css
@@ -23,12 +23,14 @@ html{
 
 body{
     margin: 0px;
+    background-color: rgb(78, 153, 172);
 }
 
 .hprimary{
     text-decoration: none;
     text-align:center;
     font-size: 4.5rem;
+    background-color: rgba(255, 255, 255, 0.699);
 } 
 .hsecondary{
     text-decoration: none;
@@ -195,34 +197,26 @@ body{
     padding-top: 10%;
     padding-bottom: 10%;    
     width: 100%;
-    height: 75%;
+    height: 45vh;
     display: flex;
     flex-direction: row-reverse;
     background-image: url(../images/indisplay/tinified/98046-Elephanta-Caves.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    animation: slider 50s infinite linear;
+    animation: slider 30s infinite ease-in;
 }
 
 @keyframes slider{
-    10%{ background-image:url(../images/indisplay/tinified/Dugarwadi.jpg) }
-    15%{ background-image:url(../images/indisplay/tinified/Dugarwadi.jpg) }
-    20%{ background-image:url(../images/indisplay/tinified/Fi-16.png) }
-    25%{ background-image:url(../images/indisplay/tinified/Fi-16.png) }
-    30%{ background-image:url(../images/indisplay/tinified/IMG_20191117_191601.jpg) }
-    35%{ background-image:url(../images/indisplay/tinified/IMG_20191117_191601.jpg) }
-    40%{ background-image:url(../images/indisplay/tinified/IMG_20191206_173253.jpg) }
-    45%{ background-image:url(../images/indisplay/tinified/IMG_20191206_173253.jpg) }
-    50%{ background-image:url(../images/indisplay/tinified/IMG_20191213_141101.jpg) }
-    55%{ background-image:url(../images/indisplay/tinified/IMG_20191213_141101.jpg) }
-    60%{ background-image:url(../images/indisplay/tinified/IMG_20200605_123934_HDR.jpg) }
-    65%{ background-image:url(../images/indisplay/tinified/IMG_20200605_123934_HDR.jpg) }
-    70%{ background-image:url(../images/indisplay/tinified/kailas-temple-ellora-caves-complex-maharashtra-1920x1080.jpg) }
-    75%{ background-image:url(../images/indisplay/tinified/kailas-temple-ellora-caves-complex-maharashtra-1920x1080.jpg) }
-    80%{ background-image:url(../images/indisplay/tinified/Lonavala-destinations-private-jet-1366x768.jpg) }
-    85%{ background-image:url(../images/indisplay/tinified/Lonavala-destinations-private-jet-1366x768.jpg) }
-    90%{ background-image:url(../images/indisplay/tinified/Sunset_at_Khadakwasla_dam_pune_20190116141712.jpg) }
+    15%{ background-image:url(../images/indisplay/tinified/98046-Elephanta-Caves.jpg) }
+    20%{ background-image:url(../images/indisplay/tinified/IMG_20191213_141101.jpg) }
+    35%{ background-image:url(../images/indisplay/tinified/IMG_20191213_141101.jpg) }
+    40%{ background-image:url(../images/indisplay/tinified/Dugarwadi.jpg) }
+    55%{ background-image:url(../images/indisplay/tinified/Dugarwadi.jpg) }
+    60%{ background-image:url(../images/indisplay/tinified/Fi-16.png) }
+    75%{ background-image:url(../images/indisplay/tinified/Fi-16.png) }
+    80%{ background-image:url(../images/indisplay/tinified/Sunset_at_Khadakwasla_dam_pune_20190116141712.jpg) }
     95%{ background-image:url(../images/indisplay/tinified/Sunset_at_Khadakwasla_dam_pune_20190116141712.jpg) }
+    
 }
 
 #wel{
@@ -232,7 +226,7 @@ body{
 .intro{
     font-size: 1.6rem;
     display: inline;
-    background-color: rgba(255, 255, 255, 0.75);
+    /* background-color: rgba(255, 255, 255, 0.75); */
     margin-top: 2px;
     margin-bottom: 2px;
     border-radius: 15px;
@@ -253,6 +247,7 @@ body{
 }
 
 /* place banner  */
+/* ***************************************************************** */
 #about{
     display: flex;
     flex-direction: column ;
@@ -297,7 +292,7 @@ body{
     margin: auto;
     padding: 10px;
     width: 250px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 12px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -330,9 +325,8 @@ body{
     margin: auto;
     padding: 10px;
     width: 250px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 12px;
-    margin-top: 10px;
     margin-bottom: 10px;
     background-color: #f7f7f7;
 }
@@ -369,7 +363,7 @@ body{
     margin: auto;
     padding: 10px;
     width: 250px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 12px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -413,7 +407,7 @@ body{
     margin: auto;
     padding: 10px;
     width: 250px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 12px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -457,7 +451,7 @@ body{
     margin: auto;
     padding: 10px;
     width: 250px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 12px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -501,7 +495,7 @@ body{
     margin: auto;
     padding: 10px;
     width: 250px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     border-radius: 12px;
     margin-top: 10px;
     margin-bottom: 10px;
