--- a/pune/css/mountains.css
+++ b/pune/css/mountains.css
@@ -197,11 +197,27 @@ nav {
 }
 
 #img{
-    background-color: black;
-    height: 400px;;
+    display: flex;
+    background-position: center;
+    height: 500px;;
     width: 95%;
     margin-right: 10%;
     margin-left: 10%;
+    background-image: url(../images/shaniwar_wada/sw1.jpg);
+    background-repeat: no-repeat;
+    background-size:auto 100%;
+    animation: slider 15s infinite ease-in;
+}
+
+@keyframes slider{
+    20%{ background-image: url(../images/shaniwar_wada/sw1.jpg);}
+    25%{ background-image: url(../images/shaniwar_wada/sw2.jpg);}
+    45%{ background-image: url(../images/shaniwar_wada/sw2.jpg);}
+    50%{ background-image: url(../images/shaniwar_wada/sw3.jpg);}
+    70%{ background-image: url(../images/shaniwar_wada/sw3.jpg);}
+    75%{ background-image: url(../images/shaniwar_wada/sw4.jpg);}
+    95%{ background-image: url(../images/shaniwar_wada/sw4.jpg);}
+
 }
 
 /* reachablity  */
